# controller/response.go
@@ -14,35 +14,43 @@ import (
 }
 */
 
-type ResponseData struct {
-	Code ResCode     `json:"code" example:"1000"`
-	Msg  interface{} `json:"msg"`
-	Data interface{} `json:"data,omitempty"`
+// 请求返回响应结构体(swag)
+type _response struct {
+	Code    ResCode `json:"code" example:"400"`
+	Message string  `json:"message" example:"status bad request"`
+	Data    string  `json:"data,omitempty"`
 }
 
-// 请求响应成功，返回成功信息
+// 请求返回响应结构体
+type ResponseData struct {
+	Code    ResCode     `json:"code" example:"400"`
+	Message interface{} `json:"message" example:"status bad request"`
+	Data    interface{} `json:"data,omitempty"`
+}
+
+// 请求返回响应成功，返回成功信息
 func ResponseSuccess(c *gin.Context, data interface{}) {
 	c.JSON(http.StatusOK, &ResponseData{
-		Code: CodeSuccess,
-		Msg:  CodeSuccess.Msg(),
-		Data: data,
+		Code:    CodeSuccess,
+		Message: CodeSuccess.Msg(),
+		Data:    data,
 	})
 }
 
-// 请求响应错误，返回错误信息
+// 请求返回响应错误，返回错误信息
 func ResponseError(c *gin.Context, code ResCode) {
 	c.JSON(http.StatusOK, &ResponseData{
-		Code: code,
-		Msg:  code.Msg(),
-		Data: nil,
+		Code:    code,
+		Message: code.Msg(),
+		Data:    nil,
 	})
 }
 
-// 请求响应错误，返回错误及错误信息
+// 请求返回响应错误，返回错误及错误信息
 func ResponseErrorWithMsg(c *gin.Context, code ResCode, msg interface{}) {
 	c.JSON(http.StatusOK, &ResponseData{
-		Code: code,
-		Msg:  msg,
-		Data: nil,
+		Code:    code,
+		Message: msg,
+		Data:    nil,
 	})
 }
