# docs/swagger.json
@@ -30,22 +30,10 @@
                 ],
                 "summary": "社区列表",
                 "responses": {
-                    "1000": {
-                        "description": "",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1005": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1006": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     }
                 }
@@ -79,28 +67,10 @@
                     }
                 ],
                 "responses": {
-                    "1000": {
-                        "description": "",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1001": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1005": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1006": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     }
                 }
@@ -108,7 +78,7 @@
         },
         "/login": {
             "post": {
-                "description": "根据传递进来的用户名和密码进行校验，通过后创建新用户",
+                "description": "根据传递进来的用户名和密码进行校验，通过后用户登陆并返回Token",
                 "consumes": [
                     "application/json"
                 ],
@@ -116,7 +86,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "users"
                 ],
                 "summary": "用户登录",
                 "parameters": [
@@ -131,28 +101,22 @@
                     }
                 ],
                 "responses": {
-                    "1000": {
-                        "description": "",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     },
-                    "1001": {
-                        "description": "",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     },
-                    "1003": {
-                        "description": "",
+                    "404": {
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1005": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     }
                 }
@@ -188,10 +152,10 @@
                     }
                 ],
                 "responses": {
-                    "1000": {
-                        "description": "",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponsePostList"
                         }
                     }
                 }
@@ -225,28 +189,10 @@
                     }
                 ],
                 "responses": {
-                    "1000": {
-                        "description": "",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1001": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1005": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1006": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     }
                 }
@@ -287,16 +233,10 @@
                     }
                 ],
                 "responses": {
-                    "1000": {
-                        "description": "",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1005": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     }
                 }
@@ -351,16 +291,10 @@
                     }
                 ],
                 "responses": {
-                    "1000": {
-                        "description": "",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1005": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     }
                 }
@@ -391,28 +325,10 @@
                     }
                 ],
                 "responses": {
-                    "1000": {
-                        "description": "",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1001": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1002": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
-                    },
-                    "1005": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
+                            "$ref": "#/definitions/controller._ResponseData"
                         }
                     }
                 }
@@ -420,18 +336,88 @@
         }
     },
     "definitions": {
-        "controller.ResponseData": {
+        "controller._ResponseData": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer",
-                    "example": 1000
+                    "example": 400
                 },
                 "data": {
-                    "type": "object"
+                    "type": "string"
                 },
-                "msg": {
-                    "type": "object"
+                "message": {
+                    "type": "string",
+                    "example": "status bad request"
+                }
+            }
+        },
+        "controller._ResponsePostList": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 400
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ApiPostDetail"
+                    }
+                },
+                "message": {
+                    "type": "string",
+                    "example": "status bad request"
+                }
+            }
+        },
+        "models.ApiPostDetail": {
+            "type": "object",
+            "required": [
+                "community_id",
+                "content",
+                "title"
+            ],
+            "properties": {
+                "author_id": {
+                    "type": "integer"
+                },
+                "author_name": {
+                    "type": "string"
+                },
+                "community_id": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "create_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "introduction": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "post_id": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "update_time": {
+                    "type": "string"
+                },
+                "vote_num": {
+                    "type": "integer"
                 }
             }
         },
